Name:             web-routes-zwaluw
Version:          0.24.1
License:          BSD3
License-File:     LICENSE
Author:           jeremy@seereason.com
Maintainer:       partners@seereason.com
Bug-Reports:      http://bugzilla.seereason.com/
Category:         Web, Language
Synopsis:         Library for maintaining correctness and composability of URLs within an application.
Description:      This module add support for creating url parsers/printers using a single unified grammar specification
Cabal-Version:    >= 1.6
Build-type:       Simple

Library
        Build-Depends:    base >= 4 && < 5,
                          mtl,
                          web-routes,
                          template-haskell
        Exposed-Modules:  Text.Zwaluw
                          Text.Zwaluw.Combinators
                          Text.Zwaluw.Error
                          Text.Zwaluw.HList
                          Text.Zwaluw.Pos
                          Text.Zwaluw.Prim
                          Text.Zwaluw.Strings
--                          Text.Zwaluw.Regular
                          Text.Zwaluw.TH
                          Web.Routes.Zwaluw

        Extensions:       DeriveDataTypeable,
                          FlexibleContexts,
                          FlexibleContexts,
                          FlexibleInstances,
                          RankNTypes,
                          ScopedTypeVariables,
                          TemplateHaskell,
                          TypeFamilies,
                          TypeFamilies,
                          TypeOperators
--                          UndecidableInstances

source-repository head
    type:     darcs
    location: http://src.seereason.com/web-routes/
